--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:onClick="SongPicked"
+    android:onClick="songPicked"
     android:padding="5dp"
     >
     <TextView
